--- a/pom.xml
+++ b/pom.xml
@@ -30,31 +30,31 @@
         <heightweighttrackerVersion>1.1-SNAPSHOT</heightweighttrackerVersion>
         <htmlformentryVersion>3.9.2</htmlformentryVersion>
         <htmlformflowsheetVersion>1.4.1</htmlformflowsheetVersion>
-        <htmlwidgetsVersion>1.9.0</htmlwidgetsVersion>
+        <htmlwidgetsVersion>1.10.0</htmlwidgetsVersion>
         <formconceptsVersion>1.0-SNAPSHOT</formconceptsVersion>
         <laboratorymanagementVersion>0.1.0.12-SNAPSHOT</laboratorymanagementVersion>
         <logicVersion>0.5.2</logicVersion>
         <metadatamappingVersion>1.3.4</metadatamappingVersion>
-        <metadatasharingVersion>1.5.0</metadatasharingVersion>
+        <metadatasharingVersion>1.6.0</metadatasharingVersion>
         <mohappointmentVersion>0.3-SNAPSHOT</mohappointmentVersion>
         <mohbillingVersion>0.0.4.4-SNAPSHOT</mohbillingVersion>
-        <mohtracVersion>0.2.2.1-SNAPSHOT</mohtracVersion>
+        <mohtracVersion>0.2.6</mohtracVersion>
         <namephoneticsVersion>1.6.0</namephoneticsVersion>
         <omodExportVersion>1.0</omodExportVersion>
         <orderextensionVersion>2.0-SNAPSHOT</orderextensionVersion>
-        <pharmacymanagementVersion>1.3.6-SNAPSHOT</pharmacymanagementVersion>
+        <pharmacymanagementVersion>1.4.0-SNAPSHOT</pharmacymanagementVersion>
         <reportingcompatibilityVersion>1.5.13</reportingcompatibilityVersion>
         <reportingobjectgroupVersion>1.2-SNAPSHOT</reportingobjectgroupVersion>
-        <reportingVersion>1.19.0</reportingVersion>
+        <reportingVersion>1.20.0</reportingVersion>
         <rowperpatientreportsVersion>1.5.6-SNAPSHOT</rowperpatientreportsVersion>
         <rwandahivflowsheetVersion>0.5.5</rwandahivflowsheetVersion>
         <rwandaprimarycareVersion>2.0.8-SNAPSHOT</rwandaprimarycareVersion>
-        <rwandareportsVersion>2.7.1-SNAPSHOT</rwandareportsVersion>
+        <rwandareportsVersion>2.7.3-SNAPSHOT</rwandareportsVersion>
         <serializationVersion>0.2.14</serializationVersion>
         <simplelabentryVersion>1.9-SNAPSHOT</simplelabentryVersion>
         <syncVersion>1.3</syncVersion>
         <validationVersion>1.0.1</validationVersion>
-        <webservicesRestVersion>2.26.0</webservicesRestVersion>
+        <webservicesRestVersion>2.28.0</webservicesRestVersion>
     </properties>
 
     <dependencies>
