Add proper version of usagestatistics and heightweighttracker to the distro

--- a/api/src/main/resources/openmrs-distro.properties
+++ b/api/src/main/resources/openmrs-distro.properties
@@ -32,6 +32,7 @@ omod.serialization.xstream=${serializationVersion}
 omod.serialization.xstream.type=omod
 omod.simplelabentry=${simplelabentryVersion}
 omod.sync=${syncVersion}
+omod.usagestatistics=${usagestatisticsVersion}
 omod.validation=${validationVersion}
 omod.validation.type=omod
 omod.webservices.rest=${webservicesRestVersion}
