--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<artifactId>rwandaemr</artifactId>
 	<version>1.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
-	<name>Rwanda Emr Module</name>
+	<name>Rwanda EMR Module</name>
 
 	<scm>
 		<connection>scm:git:git@github.com:pih/openmrs-module-rwandaemr.git</connection>
@@ -18,6 +18,7 @@
 		<module>api</module>
 		<module>omod</module>
         <module>distro</module>
+		<module>migration</module>
 	</modules>
 	
 	<properties>
