--- a/.github/workflows/build-test-prs.yml
+++ b/.github/workflows/build-test-prs.yml
@@ -2,10 +2,10 @@
 # This is based on https://github.com/actions/setup-java#apache-maven-with-a-settings-path
 # Determine if we should add a trigger on.release.types: [created] and how this will interact with on push
 
-name: Build-Test-Deploy Master
+name: Build-Test PRs
 
 on:
-  push:
+  pull_request:
     branches: ['master']
 
 jobs:
@@ -30,9 +30,4 @@ jobs:
         server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
 
     - name: Build with Maven
-      run: mvn -B package --file pom.xml
-
-    - name: Publish to GitHub Packages Maven Repository
-      run: mvn deploy
-      env:
-        GITHUB_TOKEN: ${{ github.token }}
+      run: mvn -B test --file pom.xml
