--- a/.github/workflows/build-test-prs.yml
+++ b/.github/workflows/build-test-prs.yml
@@ -30,4 +30,4 @@ jobs:
         server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
 
     - name: Build with Maven
-      run: mvn -B test --file pom.xml
+      run: mvn -B package --file pom.xml
