Attempt to deploy from github action to OpenMRS Maven Repository

--- a/.github/workflows/build-test-deploy-master.yml
+++ b/.github/workflows/build-test-deploy-master.yml
@@ -33,6 +33,6 @@ jobs:
       run: mvn -B package --file pom.xml
 
     - name: Publish to GitHub Packages Maven Repository
-      run: mvn deploy
+      run: mvn deploy --settings $GITHUB_WORKSPACE/maven-settings.xml
       env:
         GITHUB_TOKEN: ${{ github.token }}
