--- a/.github/workflows/build-test-deploy-master.yml
+++ b/.github/workflows/build-test-deploy-master.yml
@@ -32,7 +32,7 @@ jobs:
     - name: Build with Maven
       run: mvn -B package --file pom.xml
 
-    - name: Publish to GitHub Packages Maven Repository
+    - name: Maven Deploy
       run: mvn deploy --settings $GITHUB_WORKSPACE/maven-settings.xml
       env:
         BINTRAY_USERNAME: ${{ secrets.BINTRAY_USERNAME }}
