--- a/.github/workflows/perform-release.yml
+++ b/.github/workflows/perform-release.yml
@@ -38,8 +38,5 @@ jobs:
       with:
         java-version: 1.8
 
-    - name: Test commit
-      run: |
-        echo 'Test Run: $GITHUB_RUN_ID' >> $GITHUB_WORKSPACE/test.txt
-        git commit -m "Test Commit" .
-        git push
+    - name: Prepare Release
+      run: mvn -B release:prepare
