--- a/.github/workflows/perform-release.yml
+++ b/.github/workflows/perform-release.yml
@@ -7,7 +7,7 @@ name: Perform Release
 
 on:
   push:
-    branch: ['github_action_release']
+    branch: ['ci_release']
 
 jobs:
   deploy:
@@ -32,11 +32,22 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-maven-
 
-      # Set up Java 1.8 with Maven including a server.xml file for authenticating to github
+      # Set up Java 1.8 with Maven including a server.xml file for authenticating to the non-SNAPSHOT repository
     - name: Set up JDK 1.8
       uses: actions/setup-java@v1
       with:
         java-version: 1.8
+        server-id: openmrs-repo-modules-pih
+        server-username: BINTRAY_USERNAME
+        server-password: BINTRAY_PASSWORD
 
+      # Prepare the release.  This updates and commits pom to release version, tags, updates to next development version
     - name: Prepare Release
       run: mvn -B release:prepare
+
+      # Perform the release.  This checks out the tag from the previous step, builds, and deploys to Maven repository
+    - name: Perform Release
+      run: mvn -B release:perform
+      env:
+        BINTRAY_USERNAME: pih
+        BINTRAY_PASSWORD: ${{ secrets.BINTRAY_PASSWORD }}
