--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	<scm>
 		<developerConnection>scm:git:https://github.com/pih/openmrs-module-rwandaemr</developerConnection>
 		<url>https://github.com/pih/openmrs-module-rwandaemr</url>
-		<tag>2.0.0</tag>
+		<tag>HEAD</tag>
 	</scm>
 
 	<modules>
