--- a/distro/pom.xml
+++ b/distro/pom.xml
@@ -1,11 +1,10 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
         <groupId>org.openmrs.module</groupId>
         <artifactId>rwandaemr</artifactId>
-        <version>2.0.0-SNAPSHOT</version>
+        <version>2.0.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>rwandaemr-distribution</artifactId>
@@ -258,8 +257,8 @@
                                 <configuration>
                                     <target>
                                         <move todir="${project.build.directory}/distro">
-                                            <fileset dir="${project.build.directory}/dependencies"/>
-                                            <mapper type="regexp" from="^(.+)-omod-(.+)\.jar" to="\1-\2.omod"/>
+                                            <fileset dir="${project.build.directory}/dependencies" />
+                                            <mapper type="regexp" from="^(.+)-omod-(.+)\.jar" to="\1-\2.omod" />
                                         </move>
                                     </target>
                                 </configuration>
@@ -274,8 +273,8 @@
                                 <configuration>
                                     <target>
                                         <move todir="${project.build.directory}/distro">
-                                            <fileset dir="${project.build.directory}/dependencies"/>
-                                            <mapper type="regexp" from="^(.+)-omod-(.+)\.omod" to="\1-\2.omod"/>
+                                            <fileset dir="${project.build.directory}/dependencies" />
+                                            <mapper type="regexp" from="^(.+)-omod-(.+)\.omod" to="\1-\2.omod" />
                                         </move>
                                     </target>
                                 </configuration>
