--- a/.github/workflows/deploy-snapshots.yml
+++ b/.github/workflows/deploy-snapshots.yml
@@ -10,6 +10,7 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    if: "github.event.head_commit.message != 'Initiate Github Action Release'"
     steps:
 
       # Check out the code
