--- a/.github/workflows/perform-release.yml
+++ b/.github/workflows/perform-release.yml
@@ -10,7 +10,7 @@ on:
     branches: ['master']
 
 jobs:
-  release:
+  deploy:
     runs-on: ubuntu-latest
     if: "github.event.head_commit.message == 'Initiate Github Action Release'"
     steps:
@@ -49,6 +49,22 @@ jobs:
       # Perform the release.  This checks out the tag from the previous step, builds, and deploys to Maven repository
     - name: Perform Release
       run: mvn -B release:perform
+      env:
+        BINTRAY_USERNAME: pih
+        BINTRAY_PASSWORD: ${{ secrets.BINTRAY_PASSWORD }}
+
+      # Run setup-java again to replace the settings.xml with with the SNAPSHOT repository
+    - name: Set up JDK 1.8
+      uses: actions/setup-java@v1
+      with:
+        java-version: 1.8
+        server-id: openmrs-repo-modules-pih-snapshots
+        server-username: BINTRAY_USERNAME
+        server-password: BINTRAY_PASSWORD
+
+      # Now run a final deploy to ensure the next SNAPSHOT is also built and deployed to Maven
+    - name: Maven Deploy
+      run: mvn -B -e clean deploy --file pom.xml
       env:
         BINTRAY_USERNAME: pih
         BINTRAY_PASSWORD: ${{ secrets.BINTRAY_PASSWORD }}
