--- a/.github/workflows/deploy-snapshots.yml
+++ b/.github/workflows/deploy-snapshots.yml
@@ -24,8 +24,8 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-maven-
 
-      # Set up Java 1.8 with Maven including a server.xml file.  See https://github.com/actions/setup-java
-    - name: Set up JDK 1.8
+      # Set up Java 1.8 with Maven including a .m2/settings.xml file.  See https://github.com/actions/setup-java
+    - name: Set up JDK 1.8 and Maven settings file
       uses: actions/setup-java@v1
       with:
         java-version: 1.8
