--- a/.github/workflows/perform-release.yml
+++ b/.github/workflows/perform-release.yml
@@ -6,13 +6,12 @@
 name: Perform Release
 
 on:
-  push:
-    branches: ['master']
+  repository_dispatch:
+      types: ['perform-release']
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    if: "github.event.head_commit.message == 'Initiate Github Action Release'"
     steps:
 
       # Check out the code
