--- a/migration/pom.xml
+++ b/migration/pom.xml
@@ -40,6 +40,8 @@
                     <url>jdbc:mysql://${db_host}:${db_port}/${db_name}?autoReconnect=true&amp;sessionVariables=default_storage_engine%3DInnoDB&amp;useUnicode=true&amp;characterEncoding=UTF-8&amp;zeroDateTimeBehavior=convertToNull</url>
                     <username>${db_user}</username>
                     <password>${db_password}</password>
+                    <databaseChangeLogTableName>liquibasechangelog</databaseChangeLogTableName>
+                    <databaseChangeLogLockTableName>liquibasechangeloglock</databaseChangeLogLockTableName>
                 </configuration>
             </plugin>
         </plugins>
