--- a/migration/pom.xml
+++ b/migration/pom.xml
@@ -18,6 +18,7 @@
         <db_name>openmrs</db_name>
         <db_user>openmrs</db_user>
         <db_password>openmrs</db_password>
+        <changelog_name>migrations</changelog_name>
     </properties>
 
     <dependencies>
@@ -35,7 +36,7 @@
                 <artifactId>liquibase-maven-plugin</artifactId>
                 <version>3.8.8</version>
                 <configuration>
-                    <changeLogFile>src/main/resources/migrations.xml</changeLogFile>
+                    <changeLogFile>src/main/resources/${changelog_name}.xml</changeLogFile>
                     <driver>com.mysql.jdbc.Driver</driver>
                     <url>jdbc:mysql://${db_host}:${db_port}/${db_name}?autoReconnect=true&amp;sessionVariables=default_storage_engine%3DInnoDB&amp;useUnicode=true&amp;characterEncoding=UTF-8&amp;zeroDateTimeBehavior=convertToNull</url>
                     <username>${db_user}</username>
