--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,7 @@
         <authenticationuiVersion>1.1.0-SNAPSHOT</authenticationuiVersion>
         <calculationVersion>1.3.0</calculationVersion>
         <coreappsVersion>2.0.0-SNAPSHOT</coreappsVersion>
+        <dbeventVersion>1.2.0-SNAPSHOT</dbeventVersion>
         <!-- dhisconnector-1.5.6.omod -->
         <emrapiVersion>2.1.0</emrapiVersion>
         <eventVersion>2.10.0</eventVersion>
@@ -145,6 +146,12 @@
             <artifactId>coreapps-api</artifactId>
             <version>${coreappsVersion}</version>
             <type>jar</type>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.openmrs.module</groupId>
+            <artifactId>dbevent-api</artifactId>
+            <version>${dbeventVersion}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
