--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
         <authenticationVersion>1.1.0-SNAPSHOT</authenticationVersion>
         <authenticationuiVersion>1.1.0-SNAPSHOT</authenticationuiVersion>
         <calculationVersion>1.3.0</calculationVersion>
-        <coreappsVersion>2.0.0-SNAPSHOT</coreappsVersion>
+        <coreappsVersion>2.1.0-SNAPSHOT</coreappsVersion>
         <!-- dhisconnector-1.5.6.omod -->
         <emrapiVersion>2.1.0</emrapiVersion>
         <eventVersion>2.10.0</eventVersion>
@@ -45,13 +45,13 @@
         <groovyVersion>2.3.1</groovyVersion>
         <!-- growthchart-2.2.0-SNAPSHOT.omod  -->
         <heightweighttrackerVersion>2.1.0</heightweighttrackerVersion>
-        <htmlformentryVersion>5.3.0</htmlformentryVersion>
-        <htmlformentryuiVersion>2.5.0-SNAPSHOT</htmlformentryuiVersion>
+        <htmlformentryVersion>5.5.0-SNAPSHOT</htmlformentryVersion>
+        <htmlformentryuiVersion>3.0.0-SNAPSHOT</htmlformentryuiVersion>
         <htmlformflowsheetVersion>2.0.0</htmlformflowsheetVersion>
         <htmlwidgetsVersion>1.12.0-SNAPSHOT</htmlwidgetsVersion>
         <idgenVersion>4.14.0</idgenVersion>
         <imbpathologyrequestVersion>1.0.0-SNAPSHOT</imbpathologyrequestVersion>
-        <initializerVersion>2.7.0</initializerVersion>
+        <initializerVersion>2.10.0-SNAPSHOT</initializerVersion>
         <laboratorymanagementVersion>2.0.0-SNAPSHOT</laboratorymanagementVersion>
         <legacyuiVersion>1.21.0</legacyuiVersion>
         <metadatamappingVersion>1.7.0-SNAPSHOT</metadatamappingVersion>
@@ -300,8 +300,8 @@
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>3.1</version>
                     <configuration>
-                        <target>1.8</target>
-                        <source>1.8</source>
+                        <target>8</target>
+                        <source>8</source>
                     </configuration>
                 </plugin>
                 <plugin>
