--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
     <version>3.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>Rwanda EMR Module</name>
+    <description>Module to handle Rwanda Emr adjustements and support HIE integration</description>
 
     <developers>
         <developer>
