--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,7 @@
         <orderextensionVersion>3.2.0</orderextensionVersion>
         <owaVersion>1.15.0</owaVersion>
         <pharmacymanagementVersion>2.0.0-SNAPSHOT</pharmacymanagementVersion>
+        <pihappsVersion>1.0.0-SNAPSHOT</pihappsVersion>
         <providermanagementVersion>2.15.0</providermanagementVersion>
         <!-- rbcmessaging-1.0-SNAPSHOT -->
         <registrationappVersion>1.28.1</registrationappVersion>
@@ -197,6 +198,12 @@
             <groupId>org.openmrs.module</groupId>
             <artifactId>namephonetics-api</artifactId>
             <version>${namephoneticsVersion}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.openmrs.module</groupId>
+            <artifactId>pihapps-api</artifactId>
+            <version>${pihappsVersion}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
