--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
     <groupId>org.openmrs.module</groupId>
     <artifactId>rwandaemr</artifactId>
-    <version>3.1.0-SNAPSHOT</version>
+    <version>3.2.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>Rwanda EMR Module</name>
 
@@ -25,72 +25,71 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <openMRSVersion>2.6.15</openMRSVersion>
+        <openMRSVersion>2.8.2-SNAPSHOT</openMRSVersion>
         <addresshierarchyVersion>2.21.0</addresshierarchyVersion>
         <adminuiVersion>1.7.0-SNAPSHOT</adminuiVersion>
         <allergyuiVersion>1.8.7</allergyuiVersion>
-        <appframeworkVersion>2.18.0</appframeworkVersion>
+        <appframeworkVersion>2.19.0-SNAPSHOT</appframeworkVersion>
         <appuiVersion>1.18.0</appuiVersion>
-        <attachmentsVersion>2.9.0</attachmentsVersion>
-        <authenticationVersion>1.1.0</authenticationVersion>
-        <authenticationuiVersion>1.1.0</authenticationuiVersion>
+        <attachmentsVersion>4.0.0-SNAPSHOT</attachmentsVersion>
+        <authenticationVersion>2.1.0</authenticationVersion>
+        <authenticationuiVersion>1.2.0-SNAPSHOT</authenticationuiVersion>
         <bedmanagementVersion>6.2.0-SNAPSHOT</bedmanagementVersion>
         <calculationVersion>1.3.0</calculationVersion>
-        <coreappsVersion>3.0.0</coreappsVersion>
-        <!-- dhisconnector-1.5.6.omod -->
-        <emrapiVersion>2.4.0</emrapiVersion>
-        <eventVersion>2.10.0</eventVersion>
-        <fhir2Version>2.7.0</fhir2Version>
+        <coreappsVersion>3.1.0-SNAPSHOT</coreappsVersion>
+        <emrapiVersion>3.2.0-SNAPSHOT</emrapiVersion>
+        <eventVersion>4.0.0-SNAPSHOT</eventVersion>
+        <fhir2Version>2.8.0</fhir2Version>
         <formconceptsVersion>2.0.1</formconceptsVersion>
         <formentryappVersion>1.4.3</formentryappVersion>
         <groovyVersion>2.3.1</groovyVersion>
-        <!-- growthchart-2.2.0-SNAPSHOT.omod  -->
         <heightweighttrackerVersion>2.1.0</heightweighttrackerVersion>
-        <htmlformentryVersion>6.0.1</htmlformentryVersion>
+        <htmlformentryVersion>7.0.0-SNAPSHOT</htmlformentryVersion>
         <htmlformentryuiVersion>3.0.0</htmlformentryuiVersion>
         <htmlformflowsheetVersion>2.0.0</htmlformflowsheetVersion>
         <htmlwidgetsVersion>1.12.0-SNAPSHOT</htmlwidgetsVersion>
-        <idgenVersion>4.14.0</idgenVersion>
+        <idgenVersion>5.0.0-SNAPSHOT</idgenVersion>
         <imbpathologyrequestVersion>1.0.0-SNAPSHOT</imbpathologyrequestVersion>
         <initializerVersion>2.10.0-SNAPSHOT</initializerVersion>
-        <laboratorymanagementVersion>2.0.0-SNAPSHOT</laboratorymanagementVersion>
-        <legacyuiVersion>1.23.0</legacyuiVersion>
+        <laboratorymanagementVersion>2.1.0-SNAPSHOT</laboratorymanagementVersion>
+        <legacyuiVersion>2.0.0-SNAPSHOT</legacyuiVersion>
         <metadatamappingVersion>1.7.0</metadatamappingVersion>
         <metadatasharingVersion>1.10.0</metadatasharingVersion>
         <mohappointmentVersion>2.0.1-SNAPSHOT</mohappointmentVersion>
-        <mohbillingVersion>2.0.2-SNAPSHOT</mohbillingVersion>
+        <mohbillingVersion>2.2.0-SNAPSHOT</mohbillingVersion>
         <mohdataflowmoduleVersion>0.0.5-SNAPSHOT</mohdataflowmoduleVersion>
         <mohtracVersion>2.0.0-SNAPSHOT</mohtracVersion>
-        <!-- muzimacore-2.5.3-SNAPSHOT.omod -->
         <namephoneticsVersion>1.19.0</namephoneticsVersion>
         <openconceptlabVersion>2.5.0</openconceptlabVersion>
         <omodExportVersion>2.1.0</omodExportVersion>
         <orderextensionVersion>3.2.0</orderextensionVersion>
         <owaVersion>1.15.0</owaVersion>
-        <pharmacymanagementVersion>2.0.0-SNAPSHOT</pharmacymanagementVersion>
+        <pharmacymanagementVersion>2.1.0-SNAPSHOT</pharmacymanagementVersion>
         <pihappsVersion>1.1.0-SNAPSHOT</pihappsVersion>
-        <providermanagementVersion>2.15.0</providermanagementVersion>
-        <!-- rbcmessaging-1.0-SNAPSHOT -->
         <registrationappVersion>1.28.1</registrationappVersion>
         <registrationcoreVersion>1.13.0</registrationcoreVersion>
-        <reportingVersion>1.28.0</reportingVersion>
+        <reportingVersion>1.29.0-SNAPSHOT</reportingVersion>
         <reportingcompatibilityVersion>2.0.9</reportingcompatibilityVersion>
-        <reportingobjectgroupVersion>2.0.1</reportingobjectgroupVersion>
+        <reportingobjectgroupVersion>2.0.2-SNAPSHOT</reportingobjectgroupVersion>
         <reportingrestVersion>1.15.0</reportingrestVersion>
         <reportinguiVersion>1.14.0</reportinguiVersion>
         <rowperpatientreportsVersion>2.0.0</rowperpatientreportsVersion>
-        <rwandaemrVersion>${project.version}</rwandaemrVersion>
+        <rwandaemrVersion>3.2.0-SNAPSHOT</rwandaemrVersion>
         <rwandahivflowsheetVersion>2.1.0</rwandahivflowsheetVersion>
         <rwandaprimarycareVersion>2.1.0-SNAPSHOT</rwandaprimarycareVersion>
         <rwandareportsVersion>3.0.0-SNAPSHOT</rwandareportsVersion>
-        <serializationVersion>0.2.16</serializationVersion>
+        <serializationVersion>0.3.0</serializationVersion>
         <spaVersion>2.1.0</spaVersion>
         <syncVersion>3.1.0</syncVersion>
         <uicommonsVersion>2.26.0</uicommonsVersion>
         <uiframeworkVersion>4.0.0</uiframeworkVersion>
         <uilibraryVersion>2.0.7</uilibraryVersion>
         <usagestatisticsVersion>2.1.0</usagestatisticsVersion>
-        <webservicesRestVersion>2.50.0</webservicesRestVersion>
+        <webservicesRestVersion>3.1.0-SNAPSHOT</webservicesRestVersion>
+        <!-- dhisconnector-1.5.6.omod -->
+        <!-- growthchart-2.2.0-SNAPSHOT.omod  -->
+        <!-- muzimacore-2.5.3-SNAPSHOT.omod -->
+        <!-- rbcmessaging-1.0-SNAPSHOT -->
         <lombokVersion>1.18.36</lombokVersion>
         <MODULE_ID>${project.parent.artifactId}</MODULE_ID>
         <MODULE_NAME>Rwanda EMR</MODULE_NAME>
