--- a/pom.xml
+++ b/pom.xml
@@ -52,7 +52,7 @@
         <htmlwidgetsVersion>1.12.0-SNAPSHOT</htmlwidgetsVersion>
         <idgenVersion>4.14.0</idgenVersion>
         <imbpathologyrequestVersion>1.0.0-SNAPSHOT</imbpathologyrequestVersion>
-        <initializerVersion>2.10.0-SNAPSHOT</initializerVersion>
+        <initializerVersion>2.10.0</initializerVersion>
         <laboratorymanagementVersion>2.0.0-SNAPSHOT</laboratorymanagementVersion>
         <legacyuiVersion>1.23.0</legacyuiVersion>
         <metadatamappingVersion>1.7.0</metadatamappingVersion>
